# ChatterCPP

./: CMakeLists.txt  Packet.cpp  Packet.h
Client/: main.cpp
Server/: User.cpp  User.h  main.cpp
